--- a/hardware/embedded_c/calci/Makefile
+++ b/hardware/embedded_c/calci/Makefile
@@ -9,7 +9,7 @@ F_CPU=16000000
 FORMAT = ihex
 TARGET = main
 SRC = $(TARGET).c
-ASRC = 
+ASRC = parser.c
 OPT = s
 
 # Name of this Makefile (used for "make depend").
@@ -144,7 +144,7 @@ $(TARGET).elf: $(OBJ)
 
 # Program the device.  
 program: $(TARGET).hex $(TARGET).eep
-	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH) $(AVRDUDE_WRITE_EEPROM)
+	#$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH) $(AVRDUDE_WRITE_EEPROM)
 
 # Target: clean project.
 clean:
@@ -173,3 +173,8 @@ main.o: main.c /usr/avr/include/avr/io.h /usr/avr/include/avr/sfr_defs.h \
  /usr/avr/include/avr/lock.h /usr/avr/include/util/delay.h \
  /usr/avr/include/util/delay_basic.h /usr/avr/include/stdlib.h \
  /usr/lib/gcc/avr/14.2.0/include/stddef.h
+parser.o: parser.c /usr/avr/include/stdio.h /usr/avr/include/inttypes.h \
+ /usr/lib/gcc/avr/14.2.0/include/stdint.h /usr/avr/include/stdint.h \
+ /usr/lib/gcc/avr/14.2.0/include/stdarg.h \
+ /usr/lib/gcc/avr/14.2.0/include/stddef.h /usr/avr/include/stdlib.h \
+ /usr/avr/include/string.h
