--- a/hardware/embedded_c/calci/Makefile
+++ b/hardware/embedded_c/calci/Makefile
@@ -144,7 +144,7 @@ $(TARGET).elf: $(OBJ)
 
 # Program the device.  
 program: $(TARGET).hex $(TARGET).eep
-	#$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH) $(AVRDUDE_WRITE_EEPROM)
+	$(AVRDUDE) $(AVRDUDE_FLAGS) $(AVRDUDE_WRITE_FLASH) $(AVRDUDE_WRITE_EEPROM)
 
 # Target: clean project.
 clean:
